--- a/src/main/resources/templates/userInfo.html
+++ b/src/main/resources/templates/userInfo.html
@@ -15,7 +15,7 @@
                 <thead>
                 <tr>
                     <th>
-                        用户id
+                        用户id1
                     </th>
                     <th>
                         用户名
@@ -25,6 +25,9 @@
                     </th>
                     <th>
                         手机号
+                    </th>
+                    <th>
+                        操作
                     </th>
                 </tr>
                 </thead>
@@ -41,6 +44,7 @@
                     <td>
                         ${models.mobilephone}
                     </td>
+                    <td><button class="btn" type="button" contenteditable="true" onclick="update(${models.id})">更新</button></td>
                     </tr>
                 </#list>
                 </tbody>
@@ -48,5 +52,17 @@
         </div>
     </div>
 </div>
+<script type="text/javascript">
+function update(userId) {
+    $.ajax({
+        url:"/user/update",
+        type:"GET",
+        data:{userId:"userId"},
+        success:function (data) {
+
+        }
+    });
+}
+</script>
 </body>
 </html>
