--- a/src/main/resources/templates/userInfo.html
+++ b/src/main/resources/templates/userInfo.html
@@ -15,7 +15,7 @@
                 <thead>
                 <tr>
                     <th>
-                        用户id1
+                        用户id
                     </th>
                     <th>
                         用户名
@@ -59,6 +59,9 @@ function update(userId) {
         type:"GET",
         data:{userId:"userId"},
         success:function (data) {
+
+        },
+        error:function (data) {
 
         }
     });
